Added advanced matrix generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,22 @@
-cmake_minimum_required(VERSION 3.30)
-project(algorithms_2)
+cmake_minimum_required(VERSION 3.10)
+project(GraphProject)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(algorithms_2 main.cpp)
+# Все исходные файлы
+file(GLOB SOURCES
+        "*.cpp"
+        "graph/*.cpp"
+        "algorithms/*/*.cpp"
+        "io/*.cpp"
+        "utils/*.cpp"
+)
+
+# Создаем исполняемый файл
+add_executable(GraphProject ${SOURCES})
+
+# Для Windows
+if(WIN32)
+    target_link_libraries(GraphProject -lole32)
+endif()
