--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,7 @@ add_executable(GraphProject ${SOURCES})
 if(WIN32)
     target_link_libraries(GraphProject -lole32)
 endif()
+
+if (UNIX AND NOT APPLE)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lstdc++fs")
+endif()
